-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.5beta3
========
    - 0.5beta3 includes all bugfixes listed under release
      "0.4.7".

- orm
    - The 'cascade' parameter to relation() accepts None
      as a value, which is equivalent to no cascades.
    
    - Added a new SessionExtension hook called after_attach().
      This is called at the point of attachment for objects
      via add(), add_all(), delete(), and merge().

    - A mapper which inherits from another, when inheriting
      the columns of its inherited mapper, will use any
      reassigned property names specified in that inheriting
      mapper.  Previously, if "Base" had reassigned "base_id"
      to the name "id", "SubBase(Base)" would still get 
      an attribute called "base_id".   This could be worked
      around by explicitly stating the column in each
      submapper as well but this is fairly unworkable
      and also impossible when using declarative [ticket:1111].

    - Fixed a series of potential race conditions in 
      Session whereby asynchronous GC could remove unmodified,
      no longer referenced items from the session as they were 
      present in a list of items to be processed, typically 
      during session.expunge_all() and dependent methods.

    - Some improvements to the _CompileOnAttr mechanism which
      should reduce the probability of "Attribute x was 
      not replaced during compile" warnings. (this generally
      applies to SQLA hackers, like Elixir devs).
      
- ext
    - Class-bound attributes sent as arguments to 
      relation()'s remote_side and foreign_keys parameters 
      are now accepted, allowing them to be used with declarative.
      
- mysql
    - Quoting of MSEnum values for use in CREATE TABLE is now
      optional & will be quoted on demand as required.  (Quoting was
      always optional for use with existing tables.) [ticket:1110]

0.5beta2
========
    - 0.5beta2 includes some of the bugfixes listed under 